# udal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.adoc  architecture.jsonc  buf.gen.yaml  buf.yaml  go.work  go.work.sum  redocly.yaml
.github/workflows/: ci.yml
api/proto/udal/v1/: device.proto
code/api/openapi/udal/v1/: capability.swagger.json  device.openapi.v3.json  device.swagger.json
code/api/proto/udal/v1/: capability.proto  device.proto
code/cli/: go.mod  go.sum
code/cli/cmd/udal/: connect.go  get.go  integration_test.go  list.go  main.go  publish.go  schema_test.go
code/gateway/: go.mod  go.sum
code/gateway/cmd/gateway/: main.go
code/gateway/examples/adapters/echo/: echo.go  echo_test.go
code/gateway/internal/adapter/: registry.go  registry_test.go  transport.go
code/gateway/internal/adapter/adaptertest/: adaptertest.go
code/gateway/internal/adapters/can/: adapter.go  adapter_test.go  codec.go  codec_bench_test.go  codec_test.go  dbc.go  dbc_test.go  errors.go  fakesocket_test.go  frame.go  integration_test.go  race_off_test.go  race_on_test.go  socket.go  socket_linux.go  socket_other.go
code/gateway/internal/adapters/can/testdata/: sample.dbc
code/gateway/internal/adapters/http/: adapter.go  adapter_test.go  mtls_test.go  poller.go  poller_test.go  status_error.go  status_error_test.go  value.go  value_test.go  webhook.go  webhook_test.go
code/gateway/internal/adapters/mqtt/: adapter.go  adapter_faketransport_test.go  adapter_test.go  circuitbreaker.go  circuitbreaker_test.go  integration_test.go  loadtest_test.go  topics.go  topics_test.go  transport.go  v3.go  v5.go  value.go  value_test.go
code/gateway/internal/api/: broker.go  broker_test.go  commandrouter.go  commandrouter_test.go  property_test.go  types.go
code/gateway/internal/auth/: apikey.go  apikey_test.go  interceptor.go  interceptor_test.go  jwt.go  jwt_internal_test.go  jwt_test.go  mtls.go  mtls_test.go  rbac.go  rbac_test.go
code/gateway/internal/capability/: bbolt.go  memory.go  metaschema.go  metaschema_sync_test.go  registry.go  registry_test.go  schema.go  schema_test.go  semver.go  validate.go  validate_test.go
code/gateway/internal/config/: config.go  config_test.go
code/gateway/internal/health/: health.go  health_test.go
code/gateway/internal/heartbeat/: monitor.go  monitor_test.go
code/gateway/internal/logging/: debug_handler.go  debug_handler_test.go  handler.go  handler_test.go  interceptor.go  interceptor_test.go  level.go  level_test.go  trace.go  trace_test.go
code/gateway/internal/metrics/: interceptor.go  interceptor_test.go  metrics.go  metrics_test.go
code/gateway/internal/registry/: bbolt.go  bbolt_test.go  registry.go  registry_test.go
code/gateway/internal/service/: auth_integration_test.go  capability_service.go  capability_service_test.go  device_service.go  device_service_can_test.go  device_service_capability_test.go  device_service_custom_test.go  device_service_http_e2e_test.go  device_service_http_test.go  device_service_metrics_test.go  device_service_mqtt_test.go  device_service_presence_test.go  device_service_test.go  device_service_tracing_test.go  integration_test.go  sdk_integration_test.go
code/gateway/internal/tracing/: interceptor.go  interceptor_test.go  provider.go  provider_test.go
code/sdk/go/: client.go  config.go  device.go  device_internal_test.go  dial.go  errors.go  errors_test.go  go.mod  go.sum  udal.go  value.go  value_test.go
code/sdk/python/: README.md  pyproject.toml
code/sdk/python/src/udal/: __init__.py  _channel.py  _values.py  client.py  config.py  device.py  errors.py
code/sdk/python/src/udal/v1/: capability_pb2.py  capability_pb2.pyi  capability_pb2_grpc.py  device_pb2.py  device_pb2.pyi  device_pb2_grpc.py
code/sdk/python/tests/: conftest.py  test_channel.py  test_client.py  test_device.py  test_errors.py  test_values.py
code/sdk/rust/: Cargo.toml  README.md  build.rs
code/sdk/rust/examples/embedded-size-check/: Cargo.toml  build.rs  memory.x
code/sdk/rust/examples/embedded-size-check/.cargo/: config.toml
code/sdk/rust/examples/embedded-size-check/src/: main.rs
code/sdk/rust/src/: error.rs  lib.rs  value.rs
code/sdk/rust/src/grpc/: client.rs  config.rs  convert.rs  device.rs  dial.rs  mod.rs  params.rs
code/sdk/rust/src/mqtt/: json.rs  mod.rs  packet.rs  value.rs
dashboard/: README.md  pyproject.toml  rxconfig.py
dashboard/dashboard/: dashboard.py  state.py
dashboard/reflex.lock/: package.json
deployments/docker/: Dockerfile
docs/arc42/: arc42.adoc
docs/features/plans/: 10-device-registry-bbolt-embedded.md  11-mqtt-adapter-v3-v5.md  12-go-sdk-device-application-side.md  18-python-sdk.md  19-reflex-dashboard.md  22-capability-registry-service.md  23-capability-registry-cli.md  24-http-adapter-poll-webhook-mtls.md  25-can-adapter-socketcan.md  26-pluggable-transport-adapter.md  27-health-metrics-endpoints.md  28-structured-json-logging.md  29-opentelemetry-tracing.md  41-yaml-config.md  42-heartbeat-device-status.md  43-load-soak-test.md  7-protobuf-api-definitions.md  8-gateway-grpc-rest-api-layer.md  9-auth-middleware-api-key-mtls-oauth2-rbac-acl.md
docs/positioning/: positioning.adoc
docs/req42/: req42.adoc
gateway/: go.mod
gateway/cmd/gateway/: main.go
gateway/internal/registry/: bbolt.go  bbolt_test.go  registry.go  registry_test.go
gateway/internal/service/: device_service.go  device_service_test.go
