[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "udal-sdk"
version = "0.1.0"
description = "Python client SDK for UDAL (Universal Device Abstraction Layer) — application and device side, asyncio-based"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "grpcio>=1.60",
    "protobuf>=5",
    # The generated udal.v1 stubs import google.api.annotations_pb2 (from
    # device.proto/capability.proto's google.api.http options, used for the
    # gateway's REST transcoding — unused by this SDK, but still imported
    # at module load time) — that module ships in this package, not in
    # grpcio/protobuf themselves. Without it, `import udal` itself fails
    # with ModuleNotFoundError (code review finding, issue #18).
    "googleapis-common-protos>=1.63",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.6",
    "types-protobuf",
    "types-grpcio",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["udal*"]

[tool.setuptools.package-data]
udal = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=udal --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
# Generated protobuf/grpc stubs — excluded from the coverage bar for the
# same reason they're excluded from mypy strict and ruff (see above).
omit = ["src/udal/v1/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/udal/v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["src/udal/v1/"]

[[tool.mypy.overrides]]
# Generated protobuf/grpc stubs aren't written to satisfy strict mypy (no
# type: ignore comments in generated code, dynamic attribute access via
# the protobuf runtime) — same reasoning Go's own generated
# code/api/proto/gen/ is excluded from golangci-lint.
module = "udal.v1.*"
ignore_errors = true
